--- a/scratch.qmd
+++ b/scratch.qmd
@@ -1,4 +1,10 @@
+
+
 ```{r}
+#| echo: true
+#| warning: false
+#| output: false
+
 # Extract the first 5 characters to identify the cohort
 cohort_identifiers <- substr(merged$YOUTH_NUM_IN_COHORT, 1, 5)
 # Convert the cohort identifiers to a factor
@@ -13,11 +19,6 @@ participants_per_cohort <- table(cohort_identifiers)
 participants_per_cohort_df <- as.data.frame(participants_per_cohort)
 colnames(participants_per_cohort_df) <- c("Cohort", "Number_of_Participants")
 
-# Print the number of cohorts
-print(num_cohorts)
-# Print the data frame
-print(participants_per_cohort_df)
-
 #########
 
 # Extract the first 5 characters to identify the cohort and create a new variable
@@ -29,66 +30,12 @@ merged$Cohort <- as.factor(merged$Cohort)
 # Verify the new variable
 str(merged$Cohort)
 
-
-
-
-```
-
-#######################
-
-```{r}
-
 # Convert the new variable to an unordered factor
 merged$Total_Risk_Desc <- as.factor(merged$Total_Risk_Desc)
 
 # Step 1: Create a contingency table
 contingency_table <- table(merged$Cohort, merged$Total_Risk_Desc)
-print(contingency_table)
-
-# Step 2: Visualize the association with a bar plot
-library(ggplot2)
-ggplot(merged, aes(x = Cohort, fill = Total_Risk_Desc)) +
-  geom_bar(position = "dodge") +
-  labs(title = "Bar Plot of Cohort by Total Risk Description", x = "Cohort", y = "Count") +
-  theme_minimal()
-
-# Step 2: Visualize the association with a mosaic plot
-library(vcd)
-mosaic(~ Cohort + Total_Risk_Desc, data = merged, shade = TRUE, legend = TRUE)
-
-# Step 3: Conduct a chi-square test
-chi_square_test <- chisq.test(contingency_table)
-print(chi_square_test)
-
-
-
-```
-
-
-```{r}
-# Step 1: Create a contingency table
-contingency_table <- table(merged$Cohort, merged$Total_Risk_Desc)
-
-# Step 2: Convert the contingency table to a data frame
-contingency_df <- as.data.frame.matrix(contingency_table)
-
-# Step 3: Add a new column with the total count of individuals in each cohort
-contingency_df$Total <- rowSums(contingency_df)
-
-# Print the data frame
-print(contingency_df)
-
-```
-
-
-```{r}
-
-# Load the packages
-library(knitr)
-library(kableExtra)
-
-# Step 1: Create a contingency table
-contingency_table <- table(merged$Cohort, merged$Total_Risk_Desc)
+#print(contingency_table)
 
 # Step 2: Convert the contingency table to a data frame
 contingency_df <- as.data.frame.matrix(contingency_table)
@@ -121,6 +68,19 @@ contingency_df <- contingency_df %>%
 contingency_df <- contingency_df %>%
   arrange(desc(Count))
 
+
+```
+
+```{r}
+#| echo: true
+#| warning: false
+
+# Print the number of cohorts
+print(num_cohorts)
+
+# Print the data frame
+print(participants_per_cohort_df)
+
 # Step 10: Create and format the table using kable and kableExtra
 formatted_table <- contingency_df %>%
   kable("html", col.names = c("Cohort", "Count", "Mean(SD)", "High", "Low", "Moderate", "Very High")) %>%
@@ -133,10 +93,9 @@ formatted_table
 
 ```
 
-
-
-
 ```{r}
+#| echo: true
+#| warning: false
 
 # Calculate the total count for each cohort
 count_df <- merged %>%
