--- a/index.qmd
+++ b/index.qmd
@@ -567,8 +567,7 @@ totalscore_gt
 :::
 :::
 
-## Cohort Descriptives
-
+## Cohort YLS Descriptives
 
 ```{r}
 #| echo: false
@@ -598,28 +597,28 @@ merged$Cohort <- substr(merged$YOUTH_NUM_IN_COHORT, 1, 5)
 merged$Cohort <- as.factor(merged$Cohort)
 
 # Verify the new variable
-str(merged$Cohort)
+#str(merged$Cohort)
 
-# Convert the new variable to an unordered factor
+# Convert variables to an unordered factors
 merged$Total_Risk_Desc <- as.factor(merged$Total_Risk_Desc)
 
 # Step 1: Create a contingency table
-contingency_table <- table(merged$Cohort, merged$Total_Risk_Desc)
-#print(contingency_table)
+contingency_table_YLS <- table(merged$Cohort, merged$Total_Risk_Desc)
+#print(contingency_table_YLS)
 
 # Step 2: Convert the contingency table to a data frame
-contingency_df <- as.data.frame.matrix(contingency_table)
+contingency_df_YLS <- as.data.frame.matrix(contingency_table_YLS)
 
 # Step 3: Add a new column with the total count of individuals in each cohort
-contingency_df$Total <- rowSums(contingency_df)
+contingency_df_YLS$Total <- rowSums(contingency_df_YLS)
 
 # Step 4: Rename the 'Total' column to 'Count'
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   rownames_to_column(var = "Cohort") %>%
   rename(Count = Total)
 
 # Step 5: Calculate proportions for each risk category and format them as percentages
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   mutate(across(c(High, Low, Moderate, `Very High`), ~ sprintf("%d (%d%%)", ., round(./Count * 100))))
 
 # Step 6: Calculate mean and standard deviation for the totalscore variable for each cohort
@@ -628,29 +627,29 @@ mean_sd <- merged %>%
   summarize(mean_sd = sprintf("%.2f (%.2f)", mean(TOTALSCORE, na.rm = TRUE), sd(TOTALSCORE, na.rm = TRUE)))
 
 # Step 7: Merge the mean(sd) statistics with the contingency table
-contingency_df <- left_join(contingency_df, mean_sd, by = "Cohort")
+contingency_df_YLS <- left_join(contingency_df_YLS, mean_sd, by = "Cohort")
 
 # Step 8: Reorder columns so 'Count' is the second column
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   select(Cohort, Count, mean_sd, everything())
 
 # Step 9: Sort the data frame in descending order based on 'Count'
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   arrange(desc(Count))
 
 # Step x: Add an index column
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   mutate(Index = row_number())
 
 # Step x: Reorder the columns to have the index as the first column
-contingency_df <- contingency_df %>%
+contingency_df_YLS <- contingency_df_YLS %>%
   select(Index, everything())
 
 ```
 
 ::: panel-tabset
 
-### Cohort Table {.tabset .tabset-fade .tabset-pills}
+### Cohort YLS Table {.tabset .tabset-fade .tabset-pills}
 
 ::: blue
 
@@ -661,31 +660,28 @@ contingency_df <- contingency_df %>%
 #| warning: false
 
 # Step 2.3: Create and format the table using kable and kableExtra with enhancements
-formatted_table <- contingency_df %>%
+YLS_table <- contingency_df_YLS %>%
   kable("html", col.names = c("Index", "Cohort", "Count", "Mean(SD)", "High", "Low", "Moderate", "Very High"), caption = "Cohort YLS Table") %>%
   kable_styling(full_width = F, position = "center", bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
   row_spec(0, bold = TRUE, color = "white", background = "#4CAF50") %>%  # Header row styling
-  row_spec(1:nrow(contingency_df), background = c("#f2f2f2", "white")) %>%  # Alternating row colors
+  row_spec(1:nrow(contingency_df_YLS), background = c("#f2f2f2", "white")) %>%  # Alternating row colors
   column_spec(1, bold = TRUE, color = "blue") %>%  # Highlight the Index column
   column_spec(3, background = "#ffebcc") %>%  # Highlight the Count column
   add_header_above(c("Cohort Information" = 3, "YLS Total" = 1, "YLS Risk Levels" = 4)) %>%  # Multi-level header
   footnote(general = "This table provides xxxxx.")  # Add a footnote
 
 # Display the formatted table
-formatted_table
+YLS_table
 
 ```
 
-
-
 :::
 
-### Cohort Stats
+### Cohort YLS Stats
 
 ::: blue
 
 > **This table shows the correlation between cohort size and YLS scores**
-
 
 ```{r}
 #| echo: true
@@ -716,6 +712,156 @@ p_value <- correlation_test$p.value
 cat("Sample Size:", sample_size, "\n")
 cat("Correlation Coefficient:", correlation_coefficient, "\n")
 cat("P-value:", p_value, "\n")
+
+```
+
+:::
+:::
+
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+## Cohort Service-Type Descriptives
+
+```{r}
+#| echo: false
+#| warning: false
+#| output: false
+
+# Extract the first 5 characters to identify the cohort
+cohort_identifiers <- substr(merged$YOUTH_NUM_IN_COHORT, 1, 5)
+# Convert the cohort identifiers to a factor
+cohort_identifiers <- as.factor(cohort_identifiers)
+# Determine the number of unique cohorts
+num_cohorts <- nlevels(cohort_identifiers)
+
+# Count the number of participants in each cohort
+participants_per_cohort <- table(cohort_identifiers)
+
+# Convert the result to a data frame for better readability (optional)
+participants_per_cohort_df <- as.data.frame(participants_per_cohort)
+colnames(participants_per_cohort_df) <- c("Cohort", "Number_of_Participants")
+
+#########
+
+# Extract the first 5 characters to identify the cohort and create a new variable
+merged$Cohort <- substr(merged$YOUTH_NUM_IN_COHORT, 1, 5)
+
+# Convert the new variable to an unordered factor
+merged$Cohort <- as.factor(merged$Cohort)
+
+# Verify the new variable
+#str(merged$Cohort)
+
+# Convert variables to an unordered factors
+merged$Service_Type <- as.factor(merged$Service_Type)
+
+# Define a function to clean levels of a factor variable
+clean_factor_levels <- function(Service_Type) {
+  cleaned_levels <- levels(Service_Type) %>%
+    str_replace_all("[^[:alnum:]_]", "_") %>%
+    str_replace_all("__+", "_") %>%
+    str_trim() %>%
+    tolower()
+  levels(Service_Type) <- cleaned_levels
+  return(Service_Type)
+}
+
+# Ensure the 'Service_Type' column in merged data frame is a factor
+merged$Service_Type <- as.factor(merged$Service_Type)
+
+# Clean the levels of the 'Service_Type' factor variable
+merged$Service_Type <- clean_factor_levels(merged$Service_Type)
+
+# Verify the cleaned levels
+print(levels(merged$Service_Type))
+
+# Step 1: Create a contingency table
+contingency_table_serviceType <- table(merged$Cohort, merged$Service_Type)
+#print(contingency_table_serviceType)
+
+# Step 2: Convert the contingency table to a data frame
+contingency_df_serviceType <- as.data.frame.matrix(contingency_table_serviceType)
+
+# Step 3: Add a new column with the total count of individuals in each cohort
+contingency_df_serviceType$Total <- rowSums(contingency_df_serviceType)
+
+# Step 4: Rename the 'Total' column to 'Count'
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  rownames_to_column(var = "Cohort") %>%
+  rename(Count = Total)
+
+# Step 5: Calculate proportions for each risk category and format them as percentages
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  mutate(across(contains(" "), ~ sprintf("%d (%d%%)", ., round(./Count * 100))))
+
+# Add a new column with the sum of the service type columns for each individual
+service_type_columns <- colnames(contingency_df_serviceType)[3:ncol(contingency_df_serviceType)]
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  mutate(Service_Type_Sum = rowSums(across(all_of(service_type_columns), ~ as.numeric(gsub(" .*", "", .)))))
+
+# Step 8: Reorder columns so 'Count' is the second column
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  select(Cohort, Count, Service_Type_Sum, everything())
+
+# Step 9: Sort the data frame in descending order based on 'Count'
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  arrange(desc(Count))
+
+# Step x: Add an index column
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  mutate(Index = row_number())
+
+# Step x: Reorder the columns to have the index as the first column
+contingency_df_serviceType <- contingency_df_serviceType %>%
+  select(Index, everything())
+
+```
+
+
+::: panel-tabset
+
+### Cohort Service Type Table {.tabset .tabset-fade .tabset-pills}
+
+::: blue
+
+> **This table shows descriptives by cohort for different service types**
+
+```{r}
+#| echo: true
+#| warning: false
+
+# Create and format the table using kable and kableExtra with enhancements
+formatted_table_serviceType <- contingency_df_serviceType %>%
+  kable("html", col.names = c("Index", "Cohort", "Count", "Serv_Type_Sum", "ART_Comm_Based", "ART_Res_Prog", "Behav_Manag", "Chall_Progs", "CBT", "Fam_Couns", "Grp_Couns", "Indiv_Couns", "Job_Train", "Voc_Couns", "Mentoring", "Mix_Couns", "MST", "Rem_Acad_Prog", "Rest_Comm_Serv", "Soc_Skills_Train"), caption = "Cohort Service Type Table") %>%
+  kable_styling(full_width = F, position = "center", bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
+  row_spec(0, bold = TRUE, color = "white", background = "#4CAF50") %>%
+  row_spec(1:nrow(contingency_df_serviceType), background = c("#f2f2f2", "white")) %>%
+  column_spec(1, bold = TRUE, color = "blue") %>%
+  column_spec(3, background = "#ffebcc") %>%
+  add_header_above(c("Cohort Information" = 4, "YLS Service Types" = 16)) %>%
+  footnote(general = "This table provides xxxxx.") %>%
+  kable_styling(latex_options = "scale_down") %>%
+  column_spec(1:4, bold = TRUE, border_right = TRUE, width = "1.5cm") %>%
+  column_spec(5:20, width = "2cm")
+
+# Display the formatted table
+formatted_table_serviceType
+
+```
+
+:::
+
+### Cohort Service Type Stats
+
+::: blue
+
+> **This table shows associations between cohort size and service types**
+
+```{r}
+#| echo: true
+#| warning: false
+
+## TBD
 
 ```
 
