--- a/index.qmd
+++ b/index.qmd
@@ -53,6 +53,8 @@ library(psych)
 library(janitor)
 library(stringr)
 library(tidyr)
+library(htmltools)
+library(plotly)
 
 ```
 
@@ -62,6 +64,7 @@ library(tidyr)
 > **This code loads the dataframe**
 
 ```{r}
+
 # Define the clean_variable_names function
 clean_variable_names <- function(df) {
   cleaned_names <- df %>%
@@ -153,6 +156,7 @@ merged_clean <- merged_clean %>%
 #str(merged_clean)
 
 ```
+
 
 ```{r}
 
@@ -253,9 +257,9 @@ datatable(descriptives_filtered,
           caption = 'Summary Statistics Table',
           extensions = 'Buttons',
           options = list(
-            pageLength = 10,
             scrollX = TRUE,
             scrollY = "500px",
+            paging = FALSE, # Disable pagination
             dom = 'Bfrtip',
             buttons = c('copy', 'csv', 'excel', 'pdf', 'print')
           )) %>%
@@ -374,7 +378,7 @@ contingency_df_YLS <- contingency_df_YLS %>%
 # Rename columns appropriately if necessary
 names(contingency_df_YLS) <- c("Index", "Cohort", "Count", "Mean(SD)", "Low", "Moderate", "High", "High_or_Very_High")
 
-# Step 2.3: Create and format the table using kable and kableExtra with enhancements
+# Create and format the table using kable and kableExtra with enhancements
 YLS_table <- contingency_df_YLS %>%
   kable("html", col.names = c("Index", "Cohort", "Count", "Mean(SD)", "Low", "Moderate", "High", "High/Very High"), caption = "Cohort YLS Table") %>%
   kable_styling(full_width = F, position = "center", bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>%
@@ -385,6 +389,13 @@ YLS_table <- contingency_df_YLS %>%
   add_header_above(c("Cohort Information" = 3, "YLS Total" = 1, "YLS Risk Levels" = 4)) %>%
   footnote(general = "This table provides the YLS risk levels combined with 'High/Very High' indicating if either 'High' or 'Very High' was endorsed.")
 
+# Wrap the table in a div for scrolling
+html_table <- paste0(
+  '<div style="height:500px; overflow-y:auto;">',
+  as.character(YLS_table),
+  '</div>'
+)
+
 
 ```
 
@@ -393,7 +404,11 @@ YLS_table <- contingency_df_YLS %>%
 #| warning: false
 
 # Display the formatted table
-YLS_table
+#YLS_table
+
+# Display the HTML table
+HTML(html_table)
+
 
 ```
 
@@ -517,9 +532,17 @@ formatted_table_serviceType <- contingency_df_serviceType %>%
   column_spec(1:4, bold = TRUE, border_right = TRUE, width = "1.5cm") %>%
   column_spec(5:20, width = "2cm")
 
-# Display the formatted table
-formatted_table_serviceType
+# Wrap the table in a div for scrolling
+html_table_serviceType <- paste0(
+  '<div style="height:500px; overflow-y:auto;">',
+  as.character(formatted_table_serviceType),
+  '</div>'
+)
 
+# Display the HTML table
+HTML(html_table_serviceType)
+
+str(merged$service )
 ```
 
 :::
@@ -578,6 +601,18 @@ formatted_table_setting <- contingency_df_setting %>%
   add_header_above(c("Cohort Information" = 3, "Settings" = ncol(contingency_df_setting) - 3)) %>%
   footnote(general = "This table provides a breakdown of cohorts by Setting.")
 
+# Convert the table to HTML and add CSS for scrolling
+html_table <- as.character(formatted_table_setting)
+html_table_with_scroll <- paste0(
+  '<div style="height: 400px; overflow-y: auto;">',
+  html_table,
+  '</div>'
+)
+
+# Save the HTML table to a file
+#write(html_table_with_scroll, file = "formatted_table.html")
+
+
 
 
 ```
@@ -587,20 +622,82 @@ formatted_table_setting <- contingency_df_setting %>%
 #| warning: false
 #| output: true
 
-# Display the formatted table for Setting
-formatted_table_setting
+
+# Display the HTML table in RStudio Viewer or a web browser
+formatted_table_with_scroll <- htmltools::HTML(html_table_with_scroll)
+formatted_table_with_scroll
 
 ```
 
 :::
 
-### Cohort Duration Table
+### Service Type Histograms by Cohort (Temp Table)
 
 ::: blue
-> **This table shows descriptives by cohort for different durations**
-
+> **This histogram shows cohort by service type**
 
 ```{r}
+# Install and load necessary packages
+# install.packages("tidyr")
+# install.packages("ggplot2")
+# library(tidyr)
+# library(ggplot2)
+library(plotly)
+
+# Reshape the data: gather service types into a single column
+contingency_long <- contingency_df_serviceType %>%
+  gather(key = "service_type", value = "count", -Index, -Cohort, -Count, -Service_Type_Sum)
+
+# Filter out rows with zero counts (if needed)
+contingency_long_filtered <- contingency_long %>%
+  filter(count > 0)
+
+plot_data <- contingency_long_filtered %>%
+  group_by(Cohort, service_type) %>%
+  summarise(total_count = sum(count)) %>%
+  ungroup()
+
+p <- plot_ly(plot_data, x = ~service_type, y = ~total_count, type = 'bar', name = ~Cohort) %>%
+  layout(
+    title = "Histogram of Service Types by Cohort",
+    xaxis = list(title = "Service Type"),
+    yaxis = list(title = "Count"),
+    updatemenus = list(
+      list(
+        buttons = lapply(unique(plot_data$Cohort), function(cohort) {
+          list(
+            method = "restyle",
+            args = list("transforms[0].value", cohort),
+            label = cohort
+          )
+        }),
+        direction = "down",
+        x = 0.1,
+        y = 1.1,
+        showactive = TRUE
+      )
+    ),
+    transforms = list(
+      list(
+        type = 'filter',
+        target = ~Cohort,
+        operation = '=',
+        value = unique(plot_data$Cohort)[1]
+      )
+    )
+  )
+
+# Render the plot
+p
+
+```
+
+```{r}
+
+## Cohort Duration Table
+
+# ::: blue
+# > **This table shows descriptives by cohort for different durations**
 # #| echo: true
 # #| warning: false
 # #| output: false
